src/styles/base.scss
@import "./abstract/variables";

html,
body {
  height: 100%;
  margin: 0px;
  -webkit-text-size-adjust: 100%;
}

body {
  -webkit-font-smoothing: antialiased;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 16px;
  min-width: 300px;
}

.container {
  margin: 0 auto;
  height: auto;
  min-height: 300px;
  max-width: 968px;
  display: flex;
  flex-direction: column;
  // align-items: center;
}

.container-full {
  height: 100vh;
  min-height: 400px;
}

.section {
  min-height: 500px;
  // max-height: 2000px;
  // height: auto;
  margin: 0px 30px;
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
  p {
    width: 100%;
  }
}

p {
  letter-spacing: 1px;
  line-height: 1.6;
}

.section-title {
  @media (max-height: 414px), (max-width: 500px) {
    padding-top: 50px;
  }
  @media only screen and (max-height: 414px) and (max-width: 1024px) and (orientation: landscape) {
    padding-top: 80px;
  }
}

.section-content {
  padding: 0px 25px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-flow: column wrap;
  .content-text-container {
    // width: 20vw;
    // max-width: 20vw;
    display: flex;
    flex-direction: column;
  }
  // align-items: center;
}

.clickable {
  color: #404044;
  a {
    color: #404044;
  }
  :hover {
    color: #3040ba !important;
    border-color: #3040ba;
    transition: all ease-in;
    transition-duration: 0.2s;
  }
}

.button {
  // justify-content: center;
  padding: 8px;
  border: 2px solid black;
  border-radius: 3px;
  &:hover {
    color: #3040ba !important;
    border-color: #3040ba;
    transition: all ease-in;
    transition-duration: 0.2s;
  }
}

